fix: navbar z-index

--- a/src/app/components/layout/navbar/navbar.module.css
+++ b/src/app/components/layout/navbar/navbar.module.css
@@ -13,4 +13,6 @@
     width: 100vw;
     width: 100dvw;
     height: 60px;
+
+    z-index: 9999;
 }
